Fix portfolio card alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4686,4 +4686,36 @@ input, select, textarea {
 			visibility: visible;
 		}
 
-	}
+	}/* Portfolio card alignment fixes */
+.posts article {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+}
+
+.posts article .image.fit {
+	width: 100%;
+	height: 260px;
+	overflow: hidden;
+	margin-bottom: 2rem;
+}
+
+.posts article .image.fit img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
+}
+
+.posts article h2 {
+	min-height: 3.5em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
+.posts article p {
+	text-align: left;
+	margin-top: 0;
+}
